Squashed final commit
Co-authored-by: Bhavya Bhatt <46445851+Harry-122@users.noreply.github.com>
Co-authored-by: Mengqi Liu <184414621+Monica2910@users.noreply.github.com>
Co-authored-by: Pritesh Patel <55340275+priteshpate@users.noreply.github.com>
Co-authored-by: Purnima Maheshwari <122089253+code-black04@users.noreply.github.com>
Co-authored-by: Shreeya Desai <125388767+shreeya20desai@users.noreply.github.com>

--- a/springboot.automate.parent/build.gradle
+++ b/springboot.automate.parent/build.gradle
@@ -18,7 +18,7 @@ subprojects {
 	apply plugin: 'groovy'
 	dependencies {
 		api platform("org.eclipse.xtext:xtext-dev-bom:${xtextVersion}")
-		api 'org.apache.groovy:groovy-all:4.0.15'
+		api 'org.apache.groovy:groovy-all:4.0.23'
 	}
 
 	apply plugin: 'org.xtext.xtend'
@@ -35,6 +35,10 @@ subprojects {
 
 	configurations.all {
 		exclude group: 'asm'
+		resolutionStrategy {
+			force 'org.apache.groovy:groovy-swing:4.0.23'
+			force 'org.apache.groovy:groovy-all:4.0.23'
+		}
 	}
 	
 	sourceSets {
